src/main/java/medit/BPP/BPP.java
/* Generated By:JavaCC: Do not edit this line. BPP.java */
package medit.BPP;

import medit.BPP.syntaxtree.*;
import medit.BPP.visitor.*;
import medit.BPP.interpreter.*;
import medit.BPP.syntaxtree.*;


public class BPP implements BPPConstants {

  final public Start Start() throws ParseException {
  // --- JTB generated node declarations ---
  NodeList n0 = new NodeList();
  NodeSequence n1 = null;
  Require n2 = null;
  NodeToken n3 = null;
  Token n4 = null;
  NodeListOptional n5 = new NodeListOptional();
  StatementExpression n6 = null;
    label_1:
    while (true) {
      n1 = new NodeSequence(2);
      n2 = Require();
      n1.addNode(n2);
      jj_consume_token(DOT);
      n3 = JTBToolkit.makeNodeToken(n4);
      n1.addNode(n3);
      n0.addNode(n1);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REQUERE:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    n0.nodes.trimToSize();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case DEF:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      n6 = StatementExpression();
      n5.addNode(n6);
    }
    n5.nodes.trimToSize();
    {if (true) return new Start(n0, n5);}
    throw new Error("Missing return statement in function");
  }

  final public Require Require() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeList n2 = new NodeList();
  NodeToken n3 = null;
  Token n4 = null;
    jj_consume_token(REQUERE);
    n0 = JTBToolkit.makeNodeToken(n1);
    label_3:
    while (true) {
      jj_consume_token(IDENTIFIER);
      n3 = JTBToolkit.makeNodeToken(n4);
      n2.addNode(n3);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
    }
    n2.nodes.trimToSize();
    {if (true) return new Require(n0, n2);}
    throw new Error("Missing return statement in function");
  }

  final public MathExpression MathExpression() throws ParseException {
  // --- JTB generated node declarations ---
  AdditiveExpression n0 = null;
    n0 = AdditiveExpression();
    {if (true) return new MathExpression(n0);}
    throw new Error("Missing return statement in function");
  }

  final public AdditiveExpression AdditiveExpression() throws ParseException {
  // --- JTB generated node declarations ---
  MultiplicativeExpression n0 = null;
  NodeListOptional n1 = new NodeListOptional();
  NodeSequence n2 = null;
  NodeChoice n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  MultiplicativeExpression n8 = null;
    n0 = MultiplicativeExpression();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      n2 = new NodeSequence(2);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
          n4 = JTBToolkit.makeNodeToken(n5);
          n3 = new NodeChoice(n4, 0, 2);
        break;
      case MINUS:
        jj_consume_token(MINUS);
          n6 = JTBToolkit.makeNodeToken(n7);
          n3 = new NodeChoice(n6, 1, 2);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      n2.addNode(n3);
      n8 = MultiplicativeExpression();
      n2.addNode(n8);
      n1.addNode(n2);
    }
    n1.nodes.trimToSize();
    {if (true) return new AdditiveExpression(n0, n1);}
    throw new Error("Missing return statement in function");
  }

  final public MultiplicativeExpression MultiplicativeExpression() throws ParseException {
  // --- JTB generated node declarations ---
  UnaryExpression n0 = null;
  NodeListOptional n1 = new NodeListOptional();
  NodeSequence n2 = null;
  NodeChoice n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  UnaryExpression n10 = null;
    n0 = UnaryExpression();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MUL:
      case DIV:
      case MOD:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      n2 = new NodeSequence(2);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MUL:
        jj_consume_token(MUL);
          n4 = JTBToolkit.makeNodeToken(n5);
          n3 = new NodeChoice(n4, 0, 3);
        break;
      case DIV:
        jj_consume_token(DIV);
          n6 = JTBToolkit.makeNodeToken(n7);
          n3 = new NodeChoice(n6, 1, 3);
        break;
      case MOD:
        jj_consume_token(MOD);
          n8 = JTBToolkit.makeNodeToken(n9);
          n3 = new NodeChoice(n8, 2, 3);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      n2.addNode(n3);
      n10 = UnaryExpression();
      n2.addNode(n10);
      n1.addNode(n2);
    }
    n1.nodes.trimToSize();
    {if (true) return new MultiplicativeExpression(n0, n1);}
    throw new Error("Missing return statement in function");
  }

  final public UnaryExpression UnaryExpression() throws ParseException {
  // --- JTB generated node declarations ---
  NodeChoice n0 = null;
  NodeSequence n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  MathExpression n4 = null;
  NodeToken n5 = null;
  Token n6 = null;
  NodeToken n7 = null;
  Token n8 = null;
  VariableName n9 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 30:
      n1 = new NodeSequence(3);
      jj_consume_token(30);
      n2 = JTBToolkit.makeNodeToken(n3);
      n1.addNode(n2);
      n4 = MathExpression();
      n1.addNode(n4);
      jj_consume_token(31);
      n5 = JTBToolkit.makeNodeToken(n6);
      n1.addNode(n5);
      n0 = new NodeChoice(n1, 0, 3);
      break;
    case INTEGER_LITERAL:
      jj_consume_token(INTEGER_LITERAL);
      n7 = JTBToolkit.makeNodeToken(n8);
      n0 = new NodeChoice(n7, 1, 3);
      break;
    case IDENTIFIER:
      n9 = VariableName();
      n0 = new NodeChoice(n9, 2, 3);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return new UnaryExpression(n0);}
    throw new Error("Missing return statement in function");
  }

  final public RelationalExprssion RelationalExprssion() throws ParseException {
  // --- JTB generated node declarations ---
  RelationalEqualityExpression n0 = null;
    n0 = RelationalEqualityExpression();
    {if (true) return new RelationalExprssion(n0);}
    throw new Error("Missing return statement in function");
  }

  final public RelationalEqualityExpression RelationalEqualityExpression() throws ParseException {
  // --- JTB generated node declarations ---
  RelationalGreaterExpression n0 = null;
  NodeOptional n1 = new NodeOptional();
  NodeSequence n2 = null;
  NodeChoice n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  RelationalGreaterExpression n8 = null;
    n0 = RelationalGreaterExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
    case NE:
      n2 = new NodeSequence(2);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        jj_consume_token(EQ);
          n4 = JTBToolkit.makeNodeToken(n5);
          n3 = new NodeChoice(n4, 0, 2);
        break;
      case NE:
        jj_consume_token(NE);
          n6 = JTBToolkit.makeNodeToken(n7);
          n3 = new NodeChoice(n6, 1, 2);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      n2.addNode(n3);
      n8 = RelationalGreaterExpression();
      n2.addNode(n8);
      n1.addNode(n2);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    {if (true) return new RelationalEqualityExpression(n0, n1);}
    throw new Error("Missing return statement in function");
  }

  final public RelationalGreaterExpression RelationalGreaterExpression() throws ParseException {
  // --- JTB generated node declarations ---
  RelationalLessExpression n0 = null;
  NodeOptional n1 = new NodeOptional();
  NodeSequence n2 = null;
  NodeChoice n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  RelationalLessExpression n8 = null;
    n0 = RelationalLessExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GT:
    case GE:
      n2 = new NodeSequence(2);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GT:
        jj_consume_token(GT);
          n4 = JTBToolkit.makeNodeToken(n5);
          n3 = new NodeChoice(n4, 0, 2);
        break;
      case GE:
        jj_consume_token(GE);
          n6 = JTBToolkit.makeNodeToken(n7);
          n3 = new NodeChoice(n6, 1, 2);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      n2.addNode(n3);
      n8 = RelationalLessExpression();
      n2.addNode(n8);
      n1.addNode(n2);
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    {if (true) return new RelationalGreaterExpression(n0, n1);}
    throw new Error("Missing return statement in function");
  }

  final public RelationalLessExpression RelationalLessExpression() throws ParseException {
  // --- JTB generated node declarations ---
  UnaryRelational n0 = null;
  NodeOptional n1 = new NodeOptional();
  NodeSequence n2 = null;
  NodeChoice n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  UnaryRelational n8 = null;
    n0 = UnaryRelational();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LT:
    case LE:
      n2 = new NodeSequence(2);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LT:
        jj_consume_token(LT);
          n4 = JTBToolkit.makeNodeToken(n5);
          n3 = new NodeChoice(n4, 0, 2);
        break;
      case LE:
        jj_consume_token(LE);
          n6 = JTBToolkit.makeNodeToken(n7);
          n3 = new NodeChoice(n6, 1, 2);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      n2.addNode(n3);
      n8 = UnaryRelational();
      n2.addNode(n8);
      n1.addNode(n2);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    {if (true) return new RelationalLessExpression(n0, n1);}
    throw new Error("Missing return statement in function");
  }

  final public UnaryRelational UnaryRelational() throws ParseException {
  // --- JTB generated node declarations ---
  MathExpression n0 = null;
    n0 = MathExpression();
    {if (true) return new UnaryRelational(n0);}
    throw new Error("Missing return statement in function");
  }

  final public IfExpression IfExpression() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  RelationalExprssion n2 = null;
  NodeToken n3 = null;
  Token n4 = null;
  NodeListOptional n5 = new NodeListOptional();
  StatementExpression n6 = null;
  NodeToken n7 = null;
  Token n8 = null;
    jj_consume_token(IF);
    n0 = JTBToolkit.makeNodeToken(n1);
    n2 = RelationalExprssion();
    jj_consume_token(DO);
    n3 = JTBToolkit.makeNodeToken(n4);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case DEF:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_6;
      }
      n6 = StatementExpression();
      n5.addNode(n6);
    }
    n5.nodes.trimToSize();
    jj_consume_token(STOP);
    n7 = JTBToolkit.makeNodeToken(n8);
    {if (true) return new IfExpression(n0, n2, n3, n5, n7);}
    throw new Error("Missing return statement in function");
  }

  final public WhileExpression WhileExpression() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  RelationalExprssion n2 = null;
  NodeToken n3 = null;
  Token n4 = null;
  NodeListOptional n5 = new NodeListOptional();
  StatementExpression n6 = null;
  NodeToken n7 = null;
  Token n8 = null;
    jj_consume_token(WHILE);
    n0 = JTBToolkit.makeNodeToken(n1);
    n2 = RelationalExprssion();
    jj_consume_token(DO);
    n3 = JTBToolkit.makeNodeToken(n4);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case DEF:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_7;
      }
      n6 = StatementExpression();
      n5.addNode(n6);
    }
    n5.nodes.trimToSize();
    jj_consume_token(STOP);
    n7 = JTBToolkit.makeNodeToken(n8);
    {if (true) return new WhileExpression(n0, n2, n3, n5, n7);}
    throw new Error("Missing return statement in function");
  }

  final public VariableDeclaration VariableDeclaration() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  VariableName n2 = null;
  NodeToken n3 = null;
  Token n4 = null;
  MathExpression n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
    jj_consume_token(DEF);
    n0 = JTBToolkit.makeNodeToken(n1);
    n2 = VariableName();
    jj_consume_token(ASSIGN);
    n3 = JTBToolkit.makeNodeToken(n4);
    n5 = MathExpression();
    jj_consume_token(DOT);
    n6 = JTBToolkit.makeNodeToken(n7);
    {if (true) return new VariableDeclaration(n0, n2, n3, n5, n6);}
    throw new Error("Missing return statement in function");
  }

  final public VariableAssign VariableAssign() throws ParseException {
  // --- JTB generated node declarations ---
  VariableName n0 = null;
  NodeToken n1 = null;
  Token n2 = null;
  MathExpression n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
    n0 = VariableName();
    jj_consume_token(ASSIGN);
    n1 = JTBToolkit.makeNodeToken(n2);
    n3 = MathExpression();
    jj_consume_token(DOT);
    n4 = JTBToolkit.makeNodeToken(n5);
    {if (true) return new VariableAssign(n0, n1, n3, n4);}
    throw new Error("Missing return statement in function");
  }

  final public VariableName VariableName() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
    jj_consume_token(IDENTIFIER);
    n0 = JTBToolkit.makeNodeToken(n1);
    {if (true) return new VariableName(n0);}
    throw new Error("Missing return statement in function");
  }
